# scaffolding

./: Cargo.toml  flake.nix
.github/workflows/: build-scaffold-zome-module.yaml  test-app.yaml  test-zome.yaml
crates/scaffold_remote_zome/: default.nix
crates/scaffold_remote_zome/fixture/: dna.nix
crates/scaffold_remote_zome/src/: lib.rs
crates/scaffold_tnesh_zome/: default.nix
crates/scaffold_zome_module/: Cargo.toml  default.nix
crates/scaffold_zome_module/src/: lib.rs
crates/scaffold_zome_module/template/: flake.nix.hbs  package.json.hbs
crates/scaffold_zome_module/template/.github/workflows/: publish-docs.yml.hbs  sync-current-main-with-main.yml.hbs
crates/scaffold_zome_module/template/tests/: package.json.hbs
crates/scaffold_zome_module/template/tests/src/: setup.ts.hbs
crates/scaffold_zome_module/template/ui/: package.json.hbs
crates/scaffold_zome_module/template/ui/demo/: index.html.hbs
crates/scaffold_zome_module/template/ui/src/: mocks.ts.hbs  types.ts.hbs  {{kebab_case zome_name}}-client.ts.hbs  {{kebab_case zome_name}}-store.ts.hbs
crates/scaffold_zome_module/template/ui/src/elements/: {{kebab_case zome_name}}-context.ts.hbs
crates/scaffold_zome_module/template/workdir/: dna.nix.hbs  happ.nix.hbs
crates/scaffold_zome_module/template/zomes/coordinator/{{snake_case zome_name}}/: Cargo.toml.hbs  zome.nix.hbs
crates/scaffold_zome_module/template/zomes/integrity/{{snake_case zome_name}}/: Cargo.toml.hbs  zome.nix.hbs
crates/sync_npm_rev_dependencies_with_nix/: default.nix
templates/: run_test_app.sh  run_test_zome.sh
(+79 files in other folders)
